# cel-rust

./: .gitignore
antlr/: Cargo.toml  build.rs  update_protos.sh
antlr/src/: lib.rs  protobuf.rs
cel/: CHANGELOG.md
